@@ -1,5 +1,5 @@
 #
-# $Id: treeview.test,v 1.3 2008/01/06 19:16:12 jenglish Exp $
+# $Id: treeview.test,v 1.3.2.1 2008/08/19 14:48:00 jenglish Exp $
 #
 # [7Jun2005] TO CHECK: [$tv see {}] -- shouldn't work (at least, shouldn't do
 # what it currently does)
@@ -472,7 +472,7 @@ test treeview-9.0 "scroll callback - empty tree" -body {
     .tv delete [.tv children {}]
     update
     set ::scrolldata
-} -result [list 0 1]
+} -result [list 0.0 1.0]
 
 ### NEED: tests for focus item, selection
 
